--- a/README
+++ b/README
@@ -1,1 +1,12 @@
 Reads images from openni driver, serializes and transfers them over tcp.
+
+debian dependencies:
+
+needs libcv >= 2.2  (eventually build from source)
+
+apt-get install	libxmu-dev \
+		libxi-dev \
+		libusb-1.0-0 \
+		libusb-dev \
+		libhighgui-dev \
+		
