Add serialization for Mat objects and tests.
Signed-off-by: flozzone <flozzone@gmail.com>

--- a/README
+++ b/README
@@ -9,4 +9,7 @@ apt-get install	libxmu-dev \
 		libusb-1.0-0 \
 		libusb-dev \
 		libhighgui-dev \
+		libboost-dev \
+		libboost-serialization-dev \
+		libboost-test-dev \
 		
