--- a/README
+++ b/README
@@ -3,6 +3,7 @@ Reads images from openni driver, serializes and transfers them over tcp.
 debian dependencies:
 
 needs libcv >= 2.2  (eventually build from source)
+needs boost 1.48
 
 apt-get install	libxmu-dev \
 		libxi-dev \
